# work25

./: README.md
computer/: CMakeLists.txt
computer/include/: cpu.h  disc.h  gpu.h  kbd.h  ram.h
computer/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
surgery/: CMakeLists.txt  main.cpp  surgeone.cpp  surgeone.h
